# email_dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py  scheduler.py
app/api/routes/: auth.py  dashboard.py  health.py  me.py  onboarding.py
app/core/: config.py  crypto.py  logging.py
app/crud/: employee.py  snapshot.py
app/db/: session.py
app/models/: __init__.py  company.py  employee.py  snapshot.py
app/schemas/: dashboard.py  onboarding.py  overview.py
app/services/: ailabs_client.py  analysis.py  cron.py  dummy.py  json_parse.py  onboarding.py  overview.py  prompts.py  session.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: Layout.tsx  VolumeChart.tsx  icons.tsx  ui.tsx
frontend/src/lib/: api.ts  auth.ts  firebase.ts  format.ts  useApi.ts
frontend/src/pages/: ConnectOutlook.tsx  EmployeeDetail.tsx  Employees.tsx  Login.tsx  Me.tsx  Onboarding.tsx  Overview.tsx
migrations/: env.py
migrations/versions/: 70f1498e21bd_shared_analyzer_agent_per_company.py  b5a794209f0a_initial_schema.py
scripts/: init_db.py  seed_demo.py
